Fill up the section Header

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,29 @@
     <!-- header-->
     <section class="section-outer section-header">
         <div class="section-inner">
-            section-header
+            <div class="section-header-menu">
+                <div class="section-header-menu_logo">
+                    <img src="../src/icons/logo.png" width="112" alt="Логотип BOUNCY">
+                </div>
+                <div class="section-header-menu_nav">
+                    <ul class="site-navigation">
+                        <li><a href="info.html">Hello</a></li>
+                        <li><a href="news.html">About</a></li>
+                        <li><a href="price.html">Services</a></li>
+                        <li><a href="catalog.html">Portfolio</a></li>
+                        <li><a href="contacts.html">Team</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="section-header-content">
+                <div class="section-header-wrapper">
+                    <div class="section-header-wrapper_title">We are code cafe</div>
+                    <div class="section-header-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</div>
+                </div>
+            </div>
+            <div class="section-header-more">
+                <img src="../src/icons/more.png" alt="">
+            </div>
         </div>
     </section>
     <!-- / header-->
