Fill up the section Promo

--- a/src/index.html
+++ b/src/index.html
@@ -44,16 +44,31 @@
 
     <!-- promo-->
     <section class="section-outer section-promo">
-        <div class="section-inner">
-            section-promo
+        <div class="section-inner-promo">
+            <div class="section-promo-content">
+                <div class="section-promo-content-wrapper">
+                    <div class="section-promo-content-wrapper_title">This is Bouncy</div>
+                    <div class="section-promo-content-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui 
+                        blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint 
+                        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum
+                         et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</div>
+                    <button class="section-promo-content-wrapper_more">Read More</button>
+                </div>
+            </div>
+            <div class="section-promo-image">
+                <img src="../src/img/ipod.png" alt="">
+            </div>
         </div>
     </section>
     <!-- / promo-->
 
     <!-- projects-->
     <section class="section-outer section-projects">
-        <div class="section-inner">
-            section-projects
+        <div class="section-inner-projects">
+            <div class="section-inner-projects-wrapper">
+                <div class="section-inner-projects-wrapper_title"></div>
+                <div class="section-inner-projects-wrapper_subtitle"></div>
+            </div>
         </div>
     </section>
     <!-- / projects-->
