Fill up the section Details and section Projects

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div class="section-header-menu_nav">
                     <ul class="site-navigation">
                         <li><a href="info.html">Hello</a></li>
-                        <li><a href="news.html">About</a></li>
+                        <li><a href="news.html">details</a></li>
                         <li><a href="price.html">Services</a></li>
                         <li><a href="catalog.html">Portfolio</a></li>
                         <li><a href="contacts.html">Team</a></li>
@@ -62,16 +62,75 @@
     </section>
     <!-- / promo-->
 
-    <!-- projects-->
-    <section class="section-outer section-projects">
-        <div class="section-inner-projects">
-            <div class="section-inner-projects-wrapper">
-                <div class="section-inner-projects-wrapper_title"></div>
-                <div class="section-inner-projects-wrapper_subtitle"></div>
+    <!-- details-->
+    <section class="section-outer section-details">
+        <div class="section-inner-details">
+            <div class="section-inner-details-wrapper">
+                <div class="section-inner-details-wrapper_title">DetailS details BOUNCY</div>
+                <div class="section-inner-details-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                     blanditiis praesentium</div>
+                <div class="section-inner-details-wrapper-icons">
+                    <div class="section-inner-details-wrapper-icons-items">
+                            <img src="../src/icons/heart.png" alt="">
+                    </div>
+                    <div class="section-inner-details-wrapper-icons-items">
+                        <img src="../src/icons/mouse.png" alt="">
+                    </div>
+                    <div class="section-inner-details-wrapper-icons-items">
+                        <img src="../src/icons/lamp.png" alt="">
+                    </div>
+                </div>
+                <div class="section-inner-details-wrapper-content">
+                    <div class="section-inner-details-wrapper-content_title">Creative Ideas</div>
+                    <div class="section-inner-details-wrapper-content_subtitle">
+                        <div class="section-inner-details-wrapper-content_subtitle-text1">At <span class="greenfont">vero</span>
+                             eos et accusamus et iusto odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis 
+                             praesentium voluptatum deleniti atque corrupti quos dolores </div>
+                        <div class="section-inner-details-wrapper-content_subtitle-text2">At vero eos et accusamus et iusto odio 
+                            dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque <span class="boldfont">corrupti 
+                            quos</span> dolores et quas molestias <span class="greenfont">excepturi</span> sint occaecati cupiditate 
+                            non provident, <span class="boldfont">similique</span> sunt in culpa qui officia deserunt 
+                            mollitia animi, id est laborum et dolorum fuga. Et harum quidem</div>
+                    </div>
+                    
+                </div>
             </div>
         </div>
     </section>
-    <!-- / projects-->
+    <!-- / details-->
+
+    <!-- projects -->
+
+    <section class="section-outer section-projects">
+        <div class="section-inner-projects">
+            <div class="section-projects-wrapper">
+                <div class="section-projects-wrapper_title">FEATURED PROJECTS</div>
+                <div class="section-projects-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui 
+                    blanditiis praesentium</div>
+            </div>
+            <div class="section-projects-gallery">
+                <div class="section-projects-gallery-items-1">
+                     
+                </div>
+                <div class="section-projects-gallery-items-2">
+                    <div class="section-projects-gallery-items-text">VINTAGE</div> 
+                </div>
+                <div class="section-projects-gallery-items-3">
+                    <div class="section-projects-gallery-items-text">Branding</div>
+                </div>
+            </div>
+            <div class="section-projects-submit">
+                <div class="section-projects-submit-wrapper">
+                    <div class="section-projects-submit-content">At vero eos et <span class="boldfont">accusamus</span> et iusto odio 
+                        dignissimos ducimus qui blanditiis
+                    </div>
+                    <button class="section-projects-submit-button">Submit Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- projects -->
 
     <!-- services-->
     <section class="section-outer section-services">
