Fill up the section Services

--- a/src/index.html
+++ b/src/index.html
@@ -134,8 +134,87 @@
 
     <!-- services-->
     <section class="section-outer section-services">
-        <div class="section-inner">
-            section-services
+        <div class="section-inner-services">
+            <div class="section-inner-services-wrapper">
+                <div class="section-inner-services-wrapper_title">Our Services</div>
+                <div class="section-inner-services-wrapper_subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui 
+                    blanditiis praesentium
+                </div>
+            </div>
+            <div class="section-inner-services-content">
+                <div class="section-inner-services-content-icons">
+                    <div class="section-inner-services-content-icons-icon">
+                        <img src="../src/icons/service-1.png" alt="">
+                    </div>
+                    <div class="section-inner-services-content-icons-icongreen">
+                        <img src="../src/icons/service-2.png" alt="">
+                    </div>
+                    <div class="section-inner-services-content-icons-icon">
+                        <img src="../src/icons/service-3.png" alt="">
+                    </div>
+                    <div class="section-inner-services-content-icons-icon">
+                        <img src="../src/icons/service-4.png" alt="">
+                    </div>
+                </div>
+                <div class="section-inner-services-content-list">
+                    <div class="section-inner-services-content-list-text1">Graphic Design</div>
+                    <div class="section-inner-services-content-list-text2">At vero eos et accusamus et <span class="greenfont">iusto</span>  
+                        odio dignissimos <span class="boldfont">ducimus</span> qui blanditiis praesentium voluptatum deleniti</div>
+                    <div class="section-inner-services-content-list-text3">
+                        quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, <span class="greenfont"> 
+                        similique</span> sunt in culpaqui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
+                    </div>
+                </div>
+                <div class="section-inner-services-content-diagrams">
+                    <div class="section-inner-services-content-diagrams-item1">
+                        <div class="section-inner-services-content-diagrams-item-percent">
+                            <svg width=120px height=120px viewBox="0 0 42 42" class="donut">
+                                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+                                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" 
+                                stroke="#047378" stroke-width="2"></circle>
+                                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent"
+                                 stroke="#19bd9a" stroke-width="3" stroke-dasharray="80 20" stroke-dashoffset="5"></circle>
+                              <text x="50%" y="50%" class="percent-number">
+                                    80%
+                               </text>
+                              </svg>
+                        </div>
+                        <div class="section-inner-services-content-diagrams-item-text">Branding</div>
+                    </div>
+                    <div class="section-inner-services-content-diagrams-item2">
+                        <div class="section-inner-services-content-diagrams-item-percent">
+                            <svg width=120px height=120px viewBox="0 0 42 42" class="donut">
+                                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+                                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" 
+                                stroke="#047378" stroke-width="2"></circle>
+                                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent"
+                                 stroke="#19bd9a" stroke-width="3" stroke-dasharray="75 25" stroke-dashoffset="0"></circle>
+                              <text x="50%" y="50%" class="percent-number">
+                                    75%
+                               </text>
+                            </svg>
+                        </div>
+                        <div class="section-inner-services-content-diagrams-item-text">Web Design</div>
+                    </div>
+                    <div class="section-inner-services-content-diagrams-item3">
+                        <div class="section-inner-services-content-diagrams-item-percent">
+                            <svg width=120px height=120px viewBox="0 0 42 42" class="donut">
+                                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918954" fill="#fff"></circle>
+                                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" 
+                                stroke="#047378" stroke-width="2"></circle>
+                                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent"
+                                 stroke="#19bd9a" stroke-width="3" stroke-dasharray="60 40" stroke-dashoffset="85"></circle>
+                              <text x="50%" y="50%" class="percent-number">
+                                    60%
+                               </text>
+                            </svg>
+                        </div>
+                        <div class="section-inner-services-content-diagrams-item-text">UI/UX</div>
+                    </div>
+                </div>
+                
+            </div>
+            
         </div>
     </section>
     <!-- / services-->
