Fill up the section Impressed and the section Portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
                 </div>
                 <div class="section-header-menu_nav">
                     <ul class="site-navigation">
-                        <li><a href="info.html">Hello</a></li>
-                        <li><a href="news.html">details</a></li>
-                        <li><a href="price.html">Services</a></li>
-                        <li><a href="catalog.html">Portfolio</a></li>
-                        <li><a href="contacts.html">Team</a></li>
+                        <li><a href="#">Hello</a></li>
+                        <li><a href="#">details</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Team</a></li>
                     </ul>
                 </div>
             </div>
@@ -221,16 +221,68 @@
 
     <!-- impressed-->
     <section class="section-outer section-impressed">
-        <div class="section-inner">
-            section-impressed
+        <div class="section-inner-impressed">
+            <div class="section-inner-impressed-wrapper">
+                <div class="section-inner-impressed-wrapper_title">Impressed ?</div>
+                <div class="section-inner-impressed-wrapper_subtitle">At vero eos et accusamus et iusto odio 
+                    dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos 
+                    dolores et quas molestias</div>
+                <div class="section-inner-impressed-wrapper_author">- Abdullah Noman</div>
+                <div class="section-inner-impressed-wrapper_position">Creatice Director, <span class="greenfont">
+                    Code Cafe</span>
+                </div>
+                <div class="section-inner-impressed-wrapper_monitor">
+                    <img src="../src/img/Monitor-1.png" alt="">
+                    <div class="section-inner-impressed-wrapper_monitor-text">b<span class="greenfont">o</span>uncy
+                    </div>
+                </div> 
+            </div>
         </div>
     </section>
     <!-- / impressed-->
 
     <!-- portfolio-->
     <section class="section-outer section-portfolio">
-        <div class="section-inner">
-            section-portfolio
+        <div class="section-inner-portfolio">
+            <div class="section-inner-portfolio-wrapper">
+                <div class="section-inner-portfolio_title">THE PORTFOLIO</div>
+                <div class="section-inner-portfolio_subtitle">At vero eos et accusamus et iusto odio dignissimos 
+                    ducimus qui blanditiis praesentium</div>
+                <ul class="section-inner-portfolio_submenu">
+                    <li class="section-inner-portfolio_submenu-item">All Works</li>
+                    <li class="section-inner-portfolio_submenu-item">Print</li>
+                    <li class="section-inner-portfolio_submenu-item">Identity</li>
+                    <li class="section-inner-portfolio_submenu-item">Branding</li>
+                    <li class="section-inner-portfolio_submenu-item">Web</li>
+                    <li class="section-inner-portfolio_submenu-item">HTML</li>
+                    <li class="section-inner-portfolio_submenu-item">Wordpress</li>            
+                </ul>
+                <div class="section-inner-portfolio-gallery">
+                    <img src="../src/img/work-1.jpg" alt="" width="270" height="360">
+                    <img src="../src/img/work-5.jpg" alt="" width="270" height="360">
+                    <img src="../src/img/work-9.jpg" alt="" width="270" height="210">
+                    <img src="../src/img/work-2.jpg" alt="" width="270" height="230">
+                    <img src="../src/img/work-6.jpg" alt="" width="270" height="345">
+                    <img src="../src/img/work-10.jpg" alt="" width="270" height="360">
+                    <img src="../src/img/work-3.jpg" alt="" width="270" height="300">
+                    <img src="../src/img/work-7.jpg" alt="" width="270" height="375">
+                    <img src="../src/img/work-11.jpg" alt="" width="270" height="255">
+                    <img src="../src/img/work-4.jpg" alt="" width="270" height="360">
+                    <img src="../src/img/work-8.jpg" alt="" width="270" height="270">
+                    <img src="../src/img/work-12.jpg" alt="" width="270" height="300">
+                 </div>
+                 <div class="section-inner-portfolio-start">
+                    <div class="section-inner-portfolio-start-wrapper">
+                        <div class="section-inner-portfolio-start-wrapper-content">
+                            <div class="section-inner-portfolio-start-wrapper-content_text">At vero eos et 
+                                <span class="boldfont">accusamus</span> et iusto odio <span class="boldfont">
+                                dignissimos</span> ducimus qui blanditiis
+                            </div>
+                            <button class="section-inner-portfolio-start-wrapper-content_button">Start Project</button>
+                        </div>
+                    </div>
+                </div>     
+            </div>
         </div>
     </section>
     <!-- / portfolio-->
