Fill up the section Team

--- a/src/index.html
+++ b/src/index.html
@@ -289,8 +289,81 @@
 
     <!-- team-->
     <section class="section-outer section-team">
-        <div class="section-inner">
-            section-team
+        <div class="section-inner-team">
+            <div class="section-inner-team-wrapper">
+                <div class="section-inner-team-wrapper_title">THE TEAM</div>
+                <div class="section-inner-team-wrapper_subtitle">At vero eos et accusamus et iusto odio 
+                    dignissimos ducimus qui blanditiis praesentium
+                </div>
+                <div class="section-inner-team-wrapper_card">
+                    <div class="section-inner-team-wrapper_content-photo">
+                        <img src="../src/img/team-photo.jpg" alt="">
+                    </div>
+                    <div class="section-inner-team-wrapper_content-employee">
+                        <div class="section-inner-team-wrapper_content-employee-name">Abdullah Noman</div>
+                        <div class="section-inner-team-wrapper_content-employee-position">Creative Director, 
+                            Code Cafe
+                        </div>
+                        <div class="section-inner-team-wrapper_content-employee-quote">At vero eos et accusamus 
+                            et iusto odio dignissimos ducimus qui blanditiis praesentium
+                        </div>
+                        <div class="section-inner-team-wrapper_content-employee-diagram">
+                            <div class="section-inner-team-wrapper_content-employee-diagram-wrap">
+                                <div class="section-inner-team-wrapper_content-employee-diagram_sign">
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-text">
+                                        BRANDING
+                                    </div>
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-percent">80 %</div>
+                                </div>
+                                <div class="section-inner-team-wrapper_content-employee-diagram_line">
+                                    <svg>
+                                        <path d="M 0 0 264 0" stroke="#19bd9a"/>
+                                        <path d="M 264 0 330 0" stroke="#e1e4e9"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="section-inner-team-wrapper_content-employee-diagram-wrap">
+                                <div class="section-inner-team-wrapper_content-employee-diagram_sign">
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-text">
+                                        Web Design
+                                    </div>
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-percent">65 %</div>
+                                </div>
+                                <div class="section-inner-team-wrapper_content-employee-diagram_line">
+                                    <svg>
+                                        <path d="M 0 0 214.5 0" stroke="#19bd9a"/>
+                                        <path d="M 214.5 0 330 0" stroke="#e1e4e9"/>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="section-inner-team-wrapper_content-employee-diagram-wrap">
+                                <div class="section-inner-team-wrapper_content-employee-diagram_sign">
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-text">
+                                        User Interface
+                                    </div>
+                                    <div class="section-inner-team-wrapper_content-employee-diagram_sign-percent">75 %</div>
+                                </div>
+                                <div class="section-inner-team-wrapper_content-employee-diagram_line">
+                                    <svg>
+                                        <path d="M 0 0 247.5 0" stroke="#19bd9a"/>
+                                        <path d="M 247.5 0 330 0" stroke="#e1e4e9"/>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-inner-team-wrapper-slider">
+                    <div class="section-inner-team-wrapper-slider-itemgreen"></div>
+                    <div class="section-inner-team-wrapper-slider-item"></div>
+                    <div class="section-inner-team-wrapper-slider-item"></div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="section-inner-team-contact">
+            <div class="section-inner-team-contact-text">Already Loved Us? Let’s talk!</div>
+            <button class="section-inner-team-contact-button">Contact Us</button>
         </div>
     </section>
     <!-- / team-->
