Fill up the section Testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -370,8 +370,36 @@
 
     <!-- testimonials-->
     <section class="section-outer section-testimonials">
-        <div class="section-inner">
-            section-testimonials
+        <div class="section-inner-testimonials">
+            <div class="section-inner-testimonials-wrapper">
+                <div class="section-inner-testimonials-wrapper_title">Testimonials</div>
+                <div class="section-inner-testimonials-wrapper_subtitle">At vero eos et 
+                    accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                </div>
+                <div class="section-inner-testimonials-wrapper_content">
+                    <div class="section-inner-testimonials-wrapper_content-wrap">
+                        <div class="section-inner-testimonials-wrapper_content-photo">
+                            <img src="../src/img/team-founder.jpg" alt="">
+                        </div>
+                        <div class="section-inner-testimonials-wrapper_content-text">
+                            <div class="section-inner-testimonials-wrapper_content-say">At vero eos et 
+                                accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium 
+                                voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi 
+                                sint occaecati cupiditate non provident, similique sunt in culpa qui 
+                                officia deserunt mollitia.
+                            </div>
+                            <div class="section-inner-testimonials-wrapper_content-name">PARTHO</div>
+                            <div class="section-inner-testimonials-wrapper_content-position">FOUNDER, ARTWAYS BD</div>
+                        </div>
+                    </div>  
+                    <div class="section-inner-testimonials-wrapper-slider">
+                        <div class="section-inner-testimonials-wrapper-slider-itemgreen"></div>
+                        <div class="section-inner-testimonials-wrapper-slider-item"></div>
+                        <div class="section-inner-testimonials-wrapper-slider-item"></div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </section>
     <!-- / testimonials-->
