--- a/src/index.html
+++ b/src/index.html
@@ -406,8 +406,38 @@
 
     <!-- news-->
     <section class="section-outer section-news">
-        <div class="section-inner">
-            section-news
+        <div class="section-inner-news">
+            <div class="section-inner-news-wrapper">
+                <div class="section-inner-news-wrapper-content">
+                    <div class="section-inner-news-wrapper-content-header">
+                        <div class="section-inner-news-wrapper-content-header-title">LATEST NEWS</div>
+                        <div class="section-inner-news-wrapper-content-header-subtitle">At vero eos et 
+                            accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                        </div>
+                    </div>
+                    <div class="section-inner-news-wrapper-content-body">
+                        <div class="section-inner-news-wrapper-content-body-title">The trending Landing Pages</div>
+                        <div class="section-inner-news-wrapper-content-body-author">by 
+                            <span class="greenlightfont">Kabir Uddin</span>
+                        </div>
+                        <div class="section-inner-news-wrapper-content-body-summury">6950 Likes - 243 
+                            Comments - 703 shares
+                        </div>
+                        <div class="section-inner-news-wrapper-content-body-text">At vero eos et accusamus et iusto odio 
+                            dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos 
+                            dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt 
+                            in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem 
+                            rerum facilis est et expedita distinctio...
+                        </div>
+                        <div class="section-inner-news-wrapper-content-body-more">+ Read More</div>
+                    </div>
+                </div>
+                <div class="section-inner-news-wrapper-slider">
+                    <div class="section-inner-news-wrapper-slider-itemwhite"></div>
+                    <div class="section-inner-news-wrapper-slider-item"></div>
+                    <div class="section-inner-news-wrapper-slider-item"></div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- / news-->
