Fill up the section Price

--- a/src/index.html
+++ b/src/index.html
@@ -444,8 +444,34 @@
 
     <!-- price-->
     <section class="section-outer section-price">
-        <div class="section-inner">
-            section-price
+        <div class="section-inner-price">
+            <div class="section-inner-price_title">Our Price</div>
+            <div class="section-inner-price_subtitle">At vero eos et accusamus et iusto odio 
+                dignissimos ducimus qui blanditiis praesentium
+            </div>
+            <div class="section-inner-price-wrapper">
+                <div class="section-inner-price-wrapper_cards">
+                    <div class="section-inner-price-wrapper_cards-tag">
+                        <div class="section-inner-price-wrapper_cards-tag-header">PREMIUM</div>
+                        <div class="section-inner-price-wrapper_cards-tag-cost">$ 60</div>
+                        <div class="section-inner-price-wrapper_cards-tag-period">Per Month</div>
+                    </div>
+                    <div class="section-inner-price-wrapper_cards-condition">
+                        <div class="section-inner-price-wrapper_cards-condition-item">Full Branding</div>
+                        <div class="section-inner-price-wrapper_cards-condition-item">Project Management</div>
+                        <div class="section-inner-price-wrapper_cards-condition-item">Unlimited Revisions</div>
+                        <div class="section-inner-price-wrapper_cards-condition-item">24/7 h Service</div>
+                        <div class="section-inner-price-wrapper_cards-condition-item">Free Domain</div>
+                        <div class="section-inner-price-wrapper_cards-condition-item">Free Hosting</div>
+                        <div class="section-inner-price-wrapper_cards-condition-start">Let’s Start ></div>
+                    </div>
+                    <div class="section-inner-price-wrapper_cards-tag">
+                        <div class="section-inner-price-wrapper_cards-tag-header">EXCLUSIVE</div>
+                        <div class="section-inner-price-wrapper_cards-tag-cost">$ 80</div>
+                        <div class="section-inner-price-wrapper_cards-tag-period">Per Month</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- / price-->
