Fill up the section Contact

--- a/src/index.html
+++ b/src/index.html
@@ -478,16 +478,63 @@
 
     <!-- subscribe-->
     <section class="section-outer section-subscribe">
-        <div class="section-inner">
-            section-subscribe
+        <div class="section-inner-subscribe">
+            <div class="section-inner-subscribe-wrapper">
+                <div class="section-inner-subscribe-wrapper_title">Subscribe us</div>
+                <div class="section-inner-subscribe-wrapper_subtitle">At vero eos et accusamus et iusto 
+                    odio dignissimos ducimus qui blanditiis praesentium
+                </div>
+                <div class="section-inner-subscribe-wrapper-submit">
+                    <div class="section-inner-subscribe-wrapper-submit_mail">Email Address</div>
+                    <button class="section-inner-subscribe-wrapper-submit_button">SUBMIT</button>
+                </div>
+            </div>
         </div>
     </section>
     <!-- / subscribe-->
 
     <!-- contact-->
     <section class="section-outer section-contact">
-        <div class="section-inner">
-            section-contact
+        <div class="section-inner-contact">
+            <div class="section-inner-contact_title">Contact Us</div>
+            <div class="section-inner-contact_subtitle">At vero eos et accusamus et iusto odio dignissimos 
+                ducimus qui blanditiis praesentium
+            </div>
+            <div class="section-inner-contact-block">
+                <div class="section-inner-contact-block-item">
+                    <div class="section-inner-contact-block-item-top">
+                        <img src="../src/img/contact-mail.png" alt="">
+                    </div>
+                    <div class="section-inner-contact-block-item-bottom">
+                        <div class="section-inner-contact-block-item-bottom-header">EMAIL</div>
+                        <div class="section-inner-contact-block-item-bottom-value">
+                            hello@codecafe.com Personal@codecafe.com
+                        </div>
+                    </div>
+                </div>
+                <div class="section-inner-contact-block-item">
+                    <div class="section-inner-contact-block-item-top">
+                        <img src="../src/img/contact-map.png" alt="">
+                    </div>
+                    <div class="section-inner-contact-block-item-bottom">
+                        <div class="section-inner-contact-block-item-bottom-header">OUR OFFICE</div>
+                        <div class="section-inner-contact-block-item-bottom-value">
+                            240 Bhatikhana, 8200 Barisal Bangladesh
+                        </div>
+                    </div>
+                </div>
+                <div class="section-inner-contact-block-item">
+                    <div class="section-inner-contact-block-item-top">
+                        <img src="../src/img/contact-phone.png" alt="">
+                    </div>
+                    <div class="section-inner-contact-block-item-bottom">
+                        <div class="section-inner-contact-block-item-bottom-header">PHONE</div>
+                        <div class="section-inner-contact-block-item-bottom-value">
+                            +00 11 66 99 66 44 <br> 11 99 66 44 065
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- / contact-->
