Fill up the section Submit

--- a/src/index.html
+++ b/src/index.html
@@ -541,8 +541,14 @@
 
     <!-- submit-->
     <section class="section-outer section-submit">
-        <div class="section-inner">
-            section-submit
+        <div class="section-inner-submit">
+            <div class="section-inner-submit-consultation">
+                <div class="section-inner-submit-consultation-name">Your name</div>
+                <div class="section-inner-submit-consultation-mail">Email address</div>
+                <div class="section-inner-submit-consultation-subject">Subject</div>
+            </div>
+            <div class="section-inner-submit-consultation-input"></div>
+            <button class="section-inner-submit-now">SUBMIT NOW</button>
         </div>
     </section>
     <!-- / submit-->
