Fill up the section Map and Footer

--- a/src/index.html
+++ b/src/index.html
@@ -555,16 +555,39 @@
 
     <!-- map-->
     <section class="section-outer section-map">
-        <div class="section-inner">
-            section-map
+        <div class="section-inner-map">
+            <div class="section-inner-map-block-text">FIND US ON THE MAP</div>
+            <div class="section-inner-map-block-more">
+                <img src="../src/icons/more_small.png" alt="">
+            </div>
         </div>
     </section>
     <!-- / map-->
 
     <!-- footer-->
     <section class="section-outer section-footer">
-        <div class="section-inner">
-            section-footer
+        <div class="section-footer-logo">
+            <img src="../src/icons/logo_black.png" alt="">
+        </div>
+        <div class="section-footer-rights">
+            Copyright 2015. All rights Reserved
+        </div>
+        <div class="section-footer-contacts">
+            <div class="section-footer-contacts-facebook">
+                <img src="../src/icons/contact-facebook.png" alt="">
+            </div>
+            <div class="section-footer-contacts-twitter">
+                <img src="../src/icons/contact-twitter.png" alt="">
+            </div>
+            <div class="section-footer-contacts-instagram">
+                <img src="../src/icons/contact-insta.png" alt="">
+            </div>
+            <div class="section-footer-contacts-icon">
+                <img src="../src/icons/contact-icon.png" alt="">
+            </div>
+            <div class="section-footer-contacts-v">
+                <img src="../src/icons/contact-v.png" alt="">
+            </div>
         </div>
     </section>
     <!-- / footer-->
