Optimize image size

--- a/src/index.html
+++ b/src/index.html
@@ -379,7 +379,7 @@
                 <div class="section-inner-testimonials-wrapper_content">
                     <div class="section-inner-testimonials-wrapper_content-wrap">
                         <div class="section-inner-testimonials-wrapper_content-photo">
-                            <img src="../src/img/team-founder.jpg" alt="">
+                            <img src="../src/img/team-founder.png" alt="">
                         </div>
                         <div class="section-inner-testimonials-wrapper_content-text">
                             <div class="section-inner-testimonials-wrapper_content-say">At vero eos et 
@@ -503,7 +503,7 @@
             <div class="section-inner-contact-block">
                 <div class="section-inner-contact-block-item">
                     <div class="section-inner-contact-block-item-top">
-                        <img src="../src/img/contact-mail.png" alt="">
+                        <img src="../src/img/contact-mail.jpg" alt="">
                     </div>
                     <div class="section-inner-contact-block-item-bottom">
                         <div class="section-inner-contact-block-item-bottom-header">EMAIL</div>
@@ -514,7 +514,7 @@
                 </div>
                 <div class="section-inner-contact-block-item">
                     <div class="section-inner-contact-block-item-top">
-                        <img src="../src/img/contact-map.png" alt="">
+                        <img src="../src/img/contact-map.jpg" alt="">
                     </div>
                     <div class="section-inner-contact-block-item-bottom">
                         <div class="section-inner-contact-block-item-bottom-header">OUR OFFICE</div>
@@ -525,7 +525,7 @@
                 </div>
                 <div class="section-inner-contact-block-item">
                     <div class="section-inner-contact-block-item-top">
-                        <img src="../src/img/contact-phone.png" alt="">
+                        <img src="../src/img/contact-phone.jpg" alt="">
                     </div>
                     <div class="section-inner-contact-block-item-bottom">
                         <div class="section-inner-contact-block-item-bottom-header">PHONE</div>
